# docusearch

./: .gitignore  README.md  go.mod  go.sum  main.go  main.py  pyproject.toml  test_demo.py  test_docs.json
cmd/: add.go  prefix.go  repl.go  root.go  search.go  stats.go
cmd/docusearch/: main.go
docusearch/: __init__.py  cli.py  index.py  storage.py  trie.py
examples/: machine_learning.txt  sample_documents.txt  web_development.txt
pkg/index/: forward.go  reverse.go
pkg/storage/: storage.go  storage_test.go
pkg/trie/: trie.go  trie_test.go
tests/: __init__.py  conftest.py  test_integration.py  test_unit.py
