[project]
name = "docusearch"
version = "0.1.0"
description = "In-memory document storage library with TF-IDF search"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "pathlib2>=2.3.0; python_version < '3.4'"
]

[project.scripts]
docusearch = "docusearch.cli:main"
repl = "docusearch.cli:repl"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
